@@ -4,10 +4,10 @@ SDCC - free open source, retargettable, optimizing ANSI-C compiler
 SDCC 3.1.0 release is dedicated to the memory of Dennis M. Ritchie,
 father of the C programming language.
 
-Welcome to SDCC, free open source, retargettable, optimizing ANSI C compiler
-that supports a growing list of processors including the Intel 8051,
-Maxim 80DS390, Zilog Z80, Z180, Rabbit 2000, Motorola 68HC08 and the
-PIC16 and PIC18 familiy.
+Welcome to SDCC, free open source, retargettable, optimizing ANSI C
+compiler that supports a growing list of processors including the
+Intel 8051, Maxim 80DS390, Zilog Z80, Z180, Rabbit 2000, gbz80,
+Motorola 68HC08 and the PIC16 and PIC18 familiy.
 
 See share/sdcc/doc/INSTALL.txt for the installation instructions for
 the binary kits.
@@ -21,10 +21,23 @@ License:
 SDCC is licensed under the GNU Public license (GPL) v2.  Note that
 this license covers the code to the compiler and other executables,
 but explicitly does not cover any code or objects generated by sdcc.
-We have not yet decided on a license for the run time libraries, but
-it will not put any requirements on code linked against it. See:
+The great majority of sdcc run time libraries are licensed under
+GPLv2+LE which allows linking of sdcc run time libraries with
+proprietary (closed source) applications.
+
+Exception are pic device libraries and header files which are derived
+from Microchip header (.inc) and linker script (.lkr) files. Microchip
+requires that "The header files should state that they are only to be
+used with authentic Microchip devices" which makes them incompatible
+with GPL. Pic device libraries and header files are located at
+non-free\lib and non-free\include directories respectively. Sdcc should
+be run with the --use-non-free command line option.
+
+See:
 
  http://www.gnu.org/copyleft/gpl.html
+
+ http://sourceforge.net/apps/trac/sdcc/wiki/SDCC%20Library%20Licenses
 
 
 Support:
@@ -40,7 +53,7 @@ questions on the user mailing list.  See:
 Notes:
 * The ds400, pic14 and pic16 are currently experimental, but work is in
 progress. Please check http://sdcc.sourceforge.net/snap.php for snapshots.
-* The TININative, gbz80, avr and xa51 targets are no longer maintained.
+* The TININative, avr and xa51 targets are no longer maintained.
 
 Roadmap:
 COPYING         - GPL v2
@@ -90,3 +103,5 @@ SDCC includes code from:
    Development Kit (GBDK).
 * The GCC development team http://gcc.gnu.org/
    The basis of sdcpp preprocessor
+* The GNU Binutils development team http://www.gnu.org/software/binutils/
+   The basis of sdbinutils
